Make URLs & email addrs in about dialog clickable (bz 210782)

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -31,6 +31,7 @@ Requires: gnome-keyring >= 0.4.9
 # will work just fine - keyring functionality will simply be
 # disabled
 Requires: gnome-python2-gnomekeyring >= 2.15.4
+Requires: gnome-python2-gnomevfs >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Required to install Xen guests
