--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -31,6 +31,7 @@ gettext_dir = "::GETTEXTDIR::"
 
 locale.setlocale(locale.LC_ALL, '')
 gettext.install(gettext_app, gettext_dir)
+gettext.bindtextdomain(gettext_app, gettext_dir)
 
 # set up logging
 vm_dir = os.path.expanduser("~/.virt-manager")
