Updated for 0.3.0 release

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -21,7 +21,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Requires: pygtk2 >= 1.99.12-6
 Requires: gnome-python2-gconf >= 1.99.11-7
 # Absolutely require this version or newer
-Requires: libvirt-python >= 0.1.4-3
+Requires: libvirt-python >= 0.1.11-1
 # Definitely does not work with earlier due to python API changes
 Requires: dbus-python >= 0.61
 # Might work with earlier, but this is what we've tested
@@ -35,7 +35,7 @@ Requires: gnome-python2-gnomevfs >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Required to install Xen guests
-Requires: python-virtinst >= 0.95.0
+Requires: python-virtinst >= 0.100.0
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
@@ -130,6 +130,20 @@ fi
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Mon Jan 22 2006 Daniel P. Berrange <berrange@redhat.com - 0.3.0-1
+- Added support for managing inactive domains
+- Require virt-inst >= 0.100.0 and libvirt >= 0.1.11 for ianctive
+  domain management capabilities
+- Add progress bars during VM creation stage
+- Improved reliability of VNC console
+- Updated translations again
+- Added destroy option to menu bar to forceably kill a guest
+- Visually differentiate allocated memory, from actual used memory on host
+- Validate file magic when restoring a guest from a savd file
+- Performance work on domain listing
+- Allow creation of non-sparse files
+- Fix backspace key in serial console
+
 * Thu Nov  9 2006 Daniel P. Berrange <berrange@redhat.com> - 0.2.6-1
 - Imported translations from Fedora i18n repository
 - Make (most) scrollbar policies automatic
