Initial cut at help infrastructure. Help builds and displays, but says nothing. Now we can start filling in content.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4/
 
-SUBDIRS = src pixmaps po
+SUBDIRS = src pixmaps po help
 
-EXTRA_DIST = @PACKAGE@.spec
+EXTRA_DIST = @PACKAGE@.spec COPYING-DOCS xmldocs.make omf.make
 
 DISTCLEAN_FILES = @PACKAGE@.spec
