Hooked up the half-finished help document to a new help menu item. More fun to come.

--- a/help/virt-manager/C/Makefile.am
+++ b/help/virt-manager/C/Makefile.am
@@ -1,7 +1,7 @@
 figdir = figures
-docname = virt-manager-manual
+docname = virt-manager
 lang = C
-omffile = virt-manager-manual-C.omf
+omffile = virt-manager-C.omf
 entities = fdl-appendix.xml legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
