--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -25,6 +25,7 @@ import sys
 import locale
 import gettext
 import logging
+import traceback
 
 gettext_app = "virt-manager"
 gettext_dir = "::GETTEXTDIR::"
@@ -119,7 +120,32 @@ def show_engine(engine, show, uri, uuid):
     elif show=='summary' or uri:
         engine.show_manager(uri)
     else:
-        engine.show_connect()
+        tryuri = None
+        if os.path.exists("/var/lib/xend") and os.path.exists("/proc/xen"):
+            tryuri = "xen"
+        elif os.path.exists("/usr/bin/qemu"):
+            if os.getuid() == 0:
+                tryuri = "qemu:///system"
+            else:
+                tryuri = "qemu:///session"
+        if tryuri is not None:
+            try:
+                conn = engine.get_connection(tryuri)
+                engine.show_manager(tryuri)
+            except:
+                (type, value, stacktrace) = sys.exc_info ()
+
+                # Detailed error message, in English so it can be Googled.
+                details = \
+                        ("Unable to open auto-open connection to hypervisor URI '%s':\n" %
+                         str(tryuri)) + \
+                         str(type) + " " + str(value) + "\n" + \
+                         traceback.format_exc (stacktrace)
+                logging.warning(details)
+
+                tryuri = None
+        if tryuri is None:
+            engine.show_connect()
 
 # maps --show-* to remote manager (ie dbus call) methods
 def show_remote(managerObj, show, uri, uuid):
