Update info for new release

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -35,7 +35,7 @@ Requires: gnome-python2-gnomevfs >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Required to install Xen & QEMU guests
-Requires: python-virtinst >= 0.101.0
+Requires: python-virtinst >= 0.103.0
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
@@ -139,6 +139,12 @@ fi
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Mon Apr 16 2007 Daniel P. Berrange <berrange@redhat.com> - 0.4.0-1
+- Support for managing virtual networks
+- Ability to attach guest to virtual networks
+- Automatically set VNC keymap based on local keymap
+- Support for disk & network device addition/removal
+
 * Tue Mar 20 2007 Daniel P. Berrange <berrange@redhat.com> - 0.3.2-1
 - Added online help to all windows
 - Bug fixes to virtual console popup, key grab & accelerator override
