Major rework of i18n build integration to deal with bz 229324

--- a/.hgignore
+++ b/.hgignore
@@ -12,5 +12,16 @@ Makefile\.in$
 ^compile$
 ^depcomp$
 ^ltmain\.sh$
-^config\.guess$
-^config\.sub$
+^config\..*$
+^mkinstalldirs
+^libtool
+^intltool-.*\.in$
+^m4/.*\.m4$
+po/Makefile\.in\.in
+po/Rules-quot
+po/boldquot\.sed
+po/en@boldquot\.header
+po/en@quot\.header
+po/insert-header\.sin
+po/quot\.sed
+po/remove-potcdate\.sin
