--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,7 @@ ACLOCAL_AMFLAGS = -I m4/
 
 SUBDIRS = src pixmaps po help
 
-EXTRA_DIST = @PACKAGE@.spec COPYING-DOCS xmldocs.make omf.make
+EXTRA_DIST = @PACKAGE@.spec COPYING-DOCS xmldocs.make omf.make \
+	intltool-extract.in intltool-merge.in intltool-update.in
 
-DISTCLEAN_FILES = @PACKAGE@.spec
+DISTCLEAN_FILES = @PACKAGE@.spec intltool-extract intltool-merge intltool-update
