--- a/src/virt-manager.desktop.in.in
+++ b/src/virt-manager.desktop.in.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Virtual Machine Manager
-Comment=The virtual machine management tool
+_Name=Virtual Machine Manager
+_Comment=The virtual machine management tool
 Icon=::ICONDIR::/::PACKAGE::-icon.svg
 Exec=::PACKAGE::
 Type=Application
