--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -52,6 +52,7 @@ BuildRequires: gtk2-devel
 BuildRequires: python-devel
 BuildRequires: gettext
 BuildRequires: scrollkeeper
+BuildRequires: intltool
 
 Requires(pre): GConf2
 Requires(post): GConf2
