Make application menu comment GNOME HIG compliant (bz 246195)

--- a/src/virt-manager.desktop.in.in
+++ b/src/virt-manager.desktop.in.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Virtual Machine Manager
-_Comment=The virtual machine management tool
+_Comment=Manage virtual machines
 Icon=::ICONDIR::/::PACKAGE::-icon.svg
 Exec=::PACKAGE::
 Type=Application
