--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,45 @@
 src/virt-manager.desktop.in.in
-src/*.glade
+src/vmm-about.glade
+src/vmm-console.glade
+src/vmm-create-net.glade
+src/vmm-host.glade
+src/vmm-modify-file-storage.glade
+src/vmm-preferences.glade
+src/vmm-add-hardware.glade
+src/vmm-create.glade
+src/vmm-details.glade
+src/vmm-manager.glade  
+src/vmm-open-connection.glade
+src/vmm-progress.glade
 src/virt-manager.py.in
 src/virt-manager.schemas.in
-src/virtManager/*.py
-src/vncViewer/*.py
+src/virtManager/about.py
+src/virtManager/connection.py
+src/virtManager/createnet.py
+src/virtManager/engine.py
+src/virtManager/IPy.py
+src/virtManager/netdev.py
+src/virtManager/secret.py
+src/virtManager/addhardware.py
+src/virtManager/connect.py
+src/virtManager/create.py
+src/virtManager/error.py
+src/virtManager/keyring.py
+src/virtManager/network.py
+src/virtManager/serialcon.py
+src/virtManager/asyncjob.py
+src/virtManager/console.py
+src/virtManager/details.py
+src/virtManager/host.py
+src/virtManager/keytable.py
+src/virtManager/preferences.py
+src/virtManager/config.py
+src/virtManager/createmeter.py
+src/virtManager/domain.py
+src/virtManager/__init__.py
+src/virtManager/manager.py
+src/virtManager/remote.py
+src/vncViewer/crippled_des.py
+src/vncViewer/__init__.py
+src/vncViewer/rfb.py
+src/vncViewer/vnc.py
