Initial prototype switching code over to using GTK VNC

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = vncViewer graphWidgets virtManager
+SUBDIRS = graphWidgets virtManager
 
 bin_SOURCES = virt-manager.in
 bin_SCRIPTS = virt-manager
