--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -139,6 +139,8 @@ fi
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/dbus-1/services/%{name}.service
 
+%{_datadir}/man/man1/%{name}.1*
+
 %changelog
 * Mon Apr 16 2007 Daniel P. Berrange <berrange@redhat.com> - 0.4.0-1
 - Support for managing virtual networks
