--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -8,7 +8,7 @@
 
 Name: @PACKAGE@
 Version: @VERSION@
-Release: 1%{_extra_release}
+Release: hbrock12345
 Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
