--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -129,7 +129,7 @@ def show_engine(engine, show, uri, uuid):
     elif show=='console':
         engine.show_console(uri, uuid)
     elif show=='summary' or uri:
-        engine.show_manager(uri)
+        engine.connect_to_uri(uri)
     else:
         tryuri = None
         if os.path.exists("/var/lib/xend") and os.path.exists("/proc/xen"):
@@ -141,8 +141,7 @@ def show_engine(engine, show, uri, uuid):
                 tryuri = "qemu:///session"
         if tryuri is not None:
             try:
-                conn = engine.get_connection(tryuri)
-                engine.show_manager(tryuri)
+                engine.connect_to_uri(tryuri)
             except:
                 (type, value, stacktrace) = sys.exc_info ()
 
@@ -236,7 +235,7 @@ def main():
                 remote = vmmRemote(engine, name)
         except:
             # Something went wrong doing dbus setup, just ignor & carry on
-            logging.warning("Could not connection to session bus, disabling DBus service " + \
+            logging.warning("Could not get connection to session bus, disabling DBus service " + \
                             str(sys.exc_info()[0]) + " " + str(sys.exc_info()[1]))
 
     # Finally start the app for real
