--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -130,6 +130,8 @@ def show_engine(engine, show, uri, uuid):
         engine.show_console(uri, uuid)
     elif show=='summary' or uri:
         engine.connect_to_uri(uri)
+    elif engine.config.get_connections() != None:
+        engine.load_stored_uris()
     else:
         tryuri = None
         if os.path.exists("/var/lib/xend") and os.path.exists("/proc/xen"):
