Fix dep on gtk-vnc to use python sub-rpm

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -45,7 +45,7 @@ Requires: vte >= 0.12.2
 # For online help
 Requires: scrollkeeper
 # For console widget
-Requires: gtk-vnc
+Requires: gtk-vnc-python
 
 ExclusiveArch: %{ix86} x86_64 ia64
 
