--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -130,7 +130,7 @@ def show_engine(engine, show, uri, uuid):
         engine.show_console(uri, uuid)
     elif show=='summary' or uri:
         engine.connect_to_uri(uri)
-    elif engine.config.get_connections() != None:
+    elif engine.config.get_connections() != None and len(engine.config.get_connections()) > 0:
         engine.load_stored_uris()
     else:
         tryuri = None
