--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -140,6 +140,10 @@ fi
 %{_datadir}/man/man1/%{name}.1*
 
 %changelog
+* Wed Aug 29 2007 Daniel P. Berrange <berrange@redhat.com> - 0.5.0-1
+- Support for managing remote hosts
+- Switch to use GTK-VNC for the guest console
+
 * Mon Apr 16 2007 Daniel P. Berrange <berrange@redhat.com> - 0.4.0-1
 - Support for managing virtual networks
 - Ability to attach guest to virtual networks
